@@ -296,7 +296,7 @@ zconfig.schema = "peak.config.load_zconfig:ZConfigSchemaContext"
 shellcmd       = "peak.naming.factories.shellcmd:ShellCommandCtx"
 
 ref  = "peak.naming.factories.references:refURL"
-
+data = "peak.naming.factories.openable:DataURL"
 
 
 
